fix: fixing size of bars being too big in header links

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -24,7 +24,7 @@ main {
 h1 {
         font-family: Garamond, serif;
         margin: 0; /*once again makes sure no extra space is above the title*/
-        padding: 10px 0 10px 0;
+        padding: 10px 0 0 0;
         }
 h2 {
         color: #F3F7F0;
